<resources>
    <string name="app_name">Syndicate</string>
    <string name="key_dark_theme">dark_theme</string>
    <string name="title_dark_theme">Dark Theme</string>
    <string name="chat_entry_title">Type message</string>
    <string name="email_edit_text_hint">Email</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="edit_text_first_name_label">First Name</string>
    <string name="edit_text_last_name_label">Last Name</string>
    <string name="edit_text_email_label">Email</string>
    <string name="edit_text_password_label">password</string>
    <string name="button_sign_up_label">Sign Up</string>
    <string name="button_log_in_label">Log In</string>
    <string name="login_tittle">Login</string>
    <string name="empty_view_message">You Currently have no chat</string>
    <string name="friends_empty_view_message">You currently have no Friend</string>
    <string name="add_friend_title">Add As Friend</string>
    <string name="btn_chat_title">Chat Up</string>
    <string name="user_search_empty_message">Cannot Find User</string>
    <string name="buttion_set_user_title">set user account</string>
    <string name="username_label">Username</string>
    <string name="at_code">\@</string>
    <string name="user_id_label">User ID</string>
</resources>
