<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:id="@+id/toolbar"
            app:titleTextColor="@color/colorWhite"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="@dimen/sign_up_content_padding"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/til_first_name"
                android:layout_height="wrap_content">
                <EditText
                    android:hint="@string/edit_text_first_name_label"
                    android:inputType="textCapWords"
                    android:id="@+id/edt_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/til_last_name"
                android:layout_height="wrap_content">
                <EditText
                    android:hint="@string/edit_text_last_name_label"
                    android:inputType="textCapWords"
                    android:id="@+id/edt_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/til_email"
                android:layout_height="wrap_content">
                <EditText
                    android:hint="@string/edit_text_email_label"
                    android:inputType="textEmailAddress"
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/til_password"
                android:layout_height="wrap_content">
                <EditText
                    android:hint="@string/edit_text_password_label"
                    android:inputType="textPassword"
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:text="@string/button_sign_up_label"
                android:id="@+id/btn_sign_up"
                android:layout_gravity="center_horizontal"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>