<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imv_user_picture"
                    android:layout_width="200dp"
                    android:layout_centerInParent="true"
                    android:layout_height="200dp"
                    android:src="@drawable/avater" />
                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_anchorGravity="right|bottom"
                    android:visibility="gone"
                    android:layout_toRightOf="@id/imv_user_picture"
                    android:src="@drawable/ic_photo" />
            </RelativeLayout>
            <android.support.v7.widget.CardView
                android:layout_margin="@dimen/container_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:padding="@dimen/content_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/user_id_label"
                        android:id="@+id/tv_user_id_label"
                        android:padding="@dimen/content_text_padding"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_below="@id/tv_user_id_label"
                        android:layout_width="wrap_content"
                        android:id="@+id/tv_user_id"
                        android:padding="@dimen/content_text_padding"
                        android:layout_height="wrap_content"
                        tools:text="848484884ngjnf0404"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_margin="@dimen/container_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:padding="@dimen/content_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:src="@drawable/ic_edit"
                        android:layout_alignParentRight="true"
                        android:padding="@dimen/icon_padding"
                        android:background="?attr/selectableItemBackground"
                        android:id="@+id/btn_edit_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/username_label"
                        android:id="@+id/tv_user_name_label"
                        android:padding="@dimen/content_text_padding"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <LinearLayout
                        android:layout_below="@id/tv_user_name_label"
                        android:orientation="horizontal"
                        android:padding="@dimen/content_text_padding"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/at_code"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                        <TextView
                            tools:text="Afolabi Michael"
                            android:id="@+id/tv_user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_margin="@dimen/container_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:padding="@dimen/content_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="Status"
                        android:id="@+id/tv_status_title"
                        android:padding="@dimen/content_text_padding"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="this is a random text"
                        android:id="@+id/tv_user_status"
                        android:layout_below="@id/tv_status_title"
                        android:padding="@dimen/content_text_padding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <ImageButton
                        android:src="@drawable/ic_edit"
                        android:layout_alignParentRight="true"
                        android:padding="@dimen/icon_padding"
                        android:background="?attr/selectableItemBackground"
                        android:id="@+id/btn_edit_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:text="@string/btn_chat_title"
                android:id="@+id/btn_chat"
                android:visibility="visible"
                android:layout_margin="@dimen/button_margin"
                android:textColor="@color/colorWhite"
                android:background="@android:color/holo_red_dark"
                android:layout_gravity="center_horizontal"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content" />
            <Button
                android:text="@string/buttion_set_user_title"
                android:id="@+id/btn_set_user_account"
                android:visibility="visible"
                android:layout_margin="@dimen/button_margin"
                android:textColor="@color/colorWhite"
                android:background="@android:color/holo_red_dark"
                android:layout_gravity="center_horizontal"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progress_bar"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>